# ai-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-ec2.yml
configs/: model_config.json
deploy/: .env.example  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  generate-env.sh
docker/: entrypoint.sh  nginx.conf
migrations/: env.py
scripts/: init_db.py
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  factory.py  manager.py  registry.py
src/agents/examples/: __init__.py  dialog_agent.py  echo_agent.py
src/agents/implementations/: configurable_agent.py  dialog_agent.py  tool_agent.py
src/api/: app.py
src/api/schemas/: __init__.py  agent.py  common.py  space.py
src/api/v1/: __init__.py
src/api/v1/endpoints/: agents.py  chat.py  conversations.py  spaces.py
src/core/: __init__.py  config.py
src/db/: __init__.py  base.py  session.py
src/models/: __init__.py  agent.py  conversation.py  space.py  user.py
src/services/: __init__.py  agent_service.py  conversation_service.py  message_service.py  space_service.py  user_service.py
src/skills/: __init__.py
src/skills/base/: __init__.py  decorator.py  registry.py  response.py
src/skills/common/: __init__.py  text_processing.py
src/skills/domain/: __init__.py
src/utils/: __init__.py  helpers.py
tests/: conftest.py
tests/agents/: __init__.py  test_echo_agent.py
tests/services/: __init__.py
tests/skills/: __init__.py  test_text_processing.py
